--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		
 		<div id="temp-content">
 			<main id="principal">
+				<h1>Trabalho Tópicos Especiais</h1>
+				<br>
+				<p>Alunos: Paulo Eli, Julio, Andryel, Daniele</p>
 				<h2>Tarefa de GitHub</h2>
 			</main>
 		</div>
